generated/SimpleCParser.py
# Generated from grammar/SimpleC.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SimpleCParser ( Parser ):

    grammarFileName = "SimpleC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'float'", "'char'", "'void'", 
                     "'return'", "'if'", "'else'", "'while'", "'for'", "'break'", 
                     "'continue'", "'++'", "'--'", "'+='", "'-='", "'*='", 
                     "'/='", "'%='", "'=='", "'!='", "'<='", "'>='", "'&&'", 
                     "'||'", "'&'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", 
                     "'>'", "'!'", "'='", "'?'", "':'", "','", "';'", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "INT", "FLOAT", "CHAR", "VOID", "RETURN", 
                      "IF", "ELSE", "WHILE", "FOR", "BREAK", "CONTINUE", 
                      "INC", "DEC", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", 
                      "DIV_ASSIGN", "MOD_ASSIGN", "EQ", "NEQ", "LTE", "GTE", 
                      "AND", "OR", "AMP", "PLUS", "MINUS", "MUL", "DIV", 
                      "MOD", "LT", "GT", "NOT", "ASSIGN", "QUESTION", "COLON", 
                      "COMMA", "SEMI", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "LBRACK", "RBRACK", "IDENTIFIER", "INTEGER", "FLOAT_LITERAL", 
                      "CHAR_LITERAL", "STRING_LITERAL", "WS", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_functionDef = 1
    RULE_paramList = 2
    RULE_param = 3
    RULE_block = 4
    RULE_blockItem = 5
    RULE_declaration = 6
    RULE_declarationNoSemi = 7
    RULE_initDeclaratorList = 8
    RULE_initDeclarator = 9
    RULE_arraySuffix = 10
    RULE_statement = 11
    RULE_emptyStatement = 12
    RULE_exprStatement = 13
    RULE_ifStatement = 14
    RULE_whileStatement = 15
    RULE_forStatement = 16
    RULE_forInit = 17
    RULE_returnStatement = 18
    RULE_breakStatement = 19
    RULE_continueStatement = 20
    RULE_expression = 21
    RULE_assignmentExpression = 22
    RULE_assignmentOperator = 23
    RULE_conditionalExpression = 24
    RULE_logicalOrExpression = 25
    RULE_logicalAndExpression = 26
    RULE_equalityExpression = 27
    RULE_relationalExpression = 28
    RULE_additiveExpression = 29
    RULE_multiplicativeExpression = 30
    RULE_unaryExpression = 31
    RULE_postfixExpression = 32
    RULE_postfixPart = 33
    RULE_argumentList = 34
    RULE_primaryExpression = 35
    RULE_typeSpecifier = 36

    ruleNames =  [ "program", "functionDef", "paramList", "param", "block", 
                   "blockItem", "declaration", "declarationNoSemi", "initDeclaratorList", 
                   "initDeclarator", "arraySuffix", "statement", "emptyStatement", 
                   "exprStatement", "ifStatement", "whileStatement", "forStatement", 
                   "forInit", "returnStatement", "breakStatement", "continueStatement", 
                   "expression", "assignmentExpression", "assignmentOperator", 
                   "conditionalExpression", "logicalOrExpression", "logicalAndExpression", 
                   "equalityExpression", "relationalExpression", "additiveExpression", 
                   "multiplicativeExpression", "unaryExpression", "postfixExpression", 
                   "postfixPart", "argumentList", "primaryExpression", "typeSpecifier" ]

    EOF = Token.EOF
    INT=1
    FLOAT=2
    CHAR=3
    VOID=4
    RETURN=5
    IF=6
    ELSE=7
    WHILE=8
    FOR=9
    BREAK=10
    CONTINUE=11
    INC=12
    DEC=13
    ADD_ASSIGN=14
    SUB_ASSIGN=15
    MUL_ASSIGN=16
    DIV_ASSIGN=17
    MOD_ASSIGN=18
    EQ=19
    NEQ=20
    LTE=21
    GTE=22
    AND=23
    OR=24
    AMP=25
    PLUS=26
    MINUS=27
    MUL=28
    DIV=29
    MOD=30
    LT=31
    GT=32
    NOT=33
    ASSIGN=34
    QUESTION=35
    COLON=36
    COMMA=37
    SEMI=38
    LPAREN=39
    RPAREN=40
    LBRACE=41
    RBRACE=42
    LBRACK=43
    RBRACK=44
    IDENTIFIER=45
    INTEGER=46
    FLOAT_LITERAL=47
    CHAR_LITERAL=48
    STRING_LITERAL=49
    WS=50
    LINE_COMMENT=51
    BLOCK_COMMENT=52
    ERROR_CHAR=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SimpleCParser.EOF, 0)

        def functionDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCParser.FunctionDefContext)
            else:
                return self.getTypedRuleContext(SimpleCParser.FunctionDefContext,i)


        def getRuleIndex(self):
            return SimpleCParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SimpleCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 74
                self.functionDef()
                self.state = 77 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0)):
                    break

            self.state = 79
            self.match(SimpleCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(SimpleCParser.TypeSpecifierContext,0)


        def IDENTIFIER(self):
            return self.getToken(SimpleCParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(SimpleCParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(SimpleCParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(SimpleCParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(SimpleCParser.ParamListContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_functionDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDef" ):
                listener.enterFunctionDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDef" ):
                listener.exitFunctionDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDef" ):
                return visitor.visitFunctionDef(self)
            else:
                return visitor.visitChildren(self)




    def functionDef(self):

        localctx = SimpleCParser.FunctionDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functionDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.typeSpecifier()
            self.state = 82
            self.match(SimpleCParser.IDENTIFIER)
            self.state = 83
            self.match(SimpleCParser.LPAREN)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0):
                self.state = 84
                self.paramList()


            self.state = 87
            self.match(SimpleCParser.RPAREN)
            self.state = 88
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCParser.ParamContext)
            else:
                return self.getTypedRuleContext(SimpleCParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCParser.COMMA)
            else:
                return self.getToken(SimpleCParser.COMMA, i)

        def getRuleIndex(self):
            return SimpleCParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = SimpleCParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.param()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==37:
                self.state = 91
                self.match(SimpleCParser.COMMA)
                self.state = 92
                self.param()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(SimpleCParser.TypeSpecifierContext,0)


        def IDENTIFIER(self):
            return self.getToken(SimpleCParser.IDENTIFIER, 0)

        def arraySuffix(self):
            return self.getTypedRuleContext(SimpleCParser.ArraySuffixContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = SimpleCParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.typeSpecifier()
            self.state = 99
            self.match(SimpleCParser.IDENTIFIER)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==43:
                self.state = 100
                self.arraySuffix()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(SimpleCParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(SimpleCParser.RBRACE, 0)

        def blockItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCParser.BlockItemContext)
            else:
                return self.getTypedRuleContext(SimpleCParser.BlockItemContext,i)


        def getRuleIndex(self):
            return SimpleCParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = SimpleCParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(SimpleCParser.LBRACE)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1093748016562046) != 0):
                self.state = 104
                self.blockItem()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 110
            self.match(SimpleCParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(SimpleCParser.DeclarationContext,0)


        def statement(self):
            return self.getTypedRuleContext(SimpleCParser.StatementContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_blockItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockItem" ):
                listener.enterBlockItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockItem" ):
                listener.exitBlockItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockItem" ):
                return visitor.visitBlockItem(self)
            else:
                return visitor.visitChildren(self)




    def blockItem(self):

        localctx = SimpleCParser.BlockItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_blockItem)
        try:
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3, 4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.declaration()
                pass
            elif token in [5, 6, 8, 9, 10, 11, 12, 13, 25, 26, 27, 33, 38, 39, 41, 45, 46, 47, 48, 49]:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationNoSemi(self):
            return self.getTypedRuleContext(SimpleCParser.DeclarationNoSemiContext,0)


        def SEMI(self):
            return self.getToken(SimpleCParser.SEMI, 0)

        def getRuleIndex(self):
            return SimpleCParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = SimpleCParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.declarationNoSemi()
            self.state = 117
            self.match(SimpleCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationNoSemiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(SimpleCParser.TypeSpecifierContext,0)


        def initDeclaratorList(self):
            return self.getTypedRuleContext(SimpleCParser.InitDeclaratorListContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_declarationNoSemi

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarationNoSemi" ):
                listener.enterDeclarationNoSemi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarationNoSemi" ):
                listener.exitDeclarationNoSemi(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarationNoSemi" ):
                return visitor.visitDeclarationNoSemi(self)
            else:
                return visitor.visitChildren(self)




    def declarationNoSemi(self):

        localctx = SimpleCParser.DeclarationNoSemiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_declarationNoSemi)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.typeSpecifier()
            self.state = 120
            self.initDeclaratorList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitDeclaratorListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initDeclarator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCParser.InitDeclaratorContext)
            else:
                return self.getTypedRuleContext(SimpleCParser.InitDeclaratorContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCParser.COMMA)
            else:
                return self.getToken(SimpleCParser.COMMA, i)

        def getRuleIndex(self):
            return SimpleCParser.RULE_initDeclaratorList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitDeclaratorList" ):
                listener.enterInitDeclaratorList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitDeclaratorList" ):
                listener.exitInitDeclaratorList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitDeclaratorList" ):
                return visitor.visitInitDeclaratorList(self)
            else:
                return visitor.visitChildren(self)




    def initDeclaratorList(self):

        localctx = SimpleCParser.InitDeclaratorListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_initDeclaratorList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.initDeclarator()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==37:
                self.state = 123
                self.match(SimpleCParser.COMMA)
                self.state = 124
                self.initDeclarator()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitDeclaratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(SimpleCParser.IDENTIFIER, 0)

        def arraySuffix(self):
            return self.getTypedRuleContext(SimpleCParser.ArraySuffixContext,0)


        def ASSIGN(self):
            return self.getToken(SimpleCParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(SimpleCParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_initDeclarator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitDeclarator" ):
                listener.enterInitDeclarator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitDeclarator" ):
                listener.exitInitDeclarator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitDeclarator" ):
                return visitor.visitInitDeclarator(self)
            else:
                return visitor.visitChildren(self)




    def initDeclarator(self):

        localctx = SimpleCParser.InitDeclaratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_initDeclarator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(SimpleCParser.IDENTIFIER)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==43:
                self.state = 131
                self.arraySuffix()


            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 134
                self.match(SimpleCParser.ASSIGN)
                self.state = 135
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraySuffixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCParser.LBRACK)
            else:
                return self.getToken(SimpleCParser.LBRACK, i)

        def RBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCParser.RBRACK)
            else:
                return self.getToken(SimpleCParser.RBRACK, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SimpleCParser.ExpressionContext,i)


        def getRuleIndex(self):
            return SimpleCParser.RULE_arraySuffix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArraySuffix" ):
                listener.enterArraySuffix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArraySuffix" ):
                listener.exitArraySuffix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraySuffix" ):
                return visitor.visitArraySuffix(self)
            else:
                return visitor.visitChildren(self)




    def arraySuffix(self):

        localctx = SimpleCParser.ArraySuffixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arraySuffix)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 138
                self.match(SimpleCParser.LBRACK)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1091274115395584) != 0):
                    self.state = 139
                    self.expression()


                self.state = 142
                self.match(SimpleCParser.RBRACK)
                self.state = 145 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==43):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def emptyStatement(self):
            return self.getTypedRuleContext(SimpleCParser.EmptyStatementContext,0)


        def exprStatement(self):
            return self.getTypedRuleContext(SimpleCParser.ExprStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(SimpleCParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(SimpleCParser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(SimpleCParser.ForStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(SimpleCParser.ReturnStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(SimpleCParser.BreakStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(SimpleCParser.ContinueStatementContext,0)


        def block(self):
            return self.getTypedRuleContext(SimpleCParser.BlockContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SimpleCParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statement)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.emptyStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.exprStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 149
                self.ifStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 150
                self.whileStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 151
                self.forStatement()
                pass
